<resources>
    <string name="app_name">Цена вопроса</string>
    <string name="press_to_exit_text">Нажмите еще раз для выхода</string>
    <string name="auth_activity_auth">Авторизация</string>
    <string name="auth_activity_set_phone">Введите номер телефона</string>
    <string name="auth_activity_7">+7&#160;</string>
    <string name="auth_activity_login">Войти</string>
    <string name="auth_activity_robot_wait">Вам в ближайшее время поступит звонок от робота.</string>
    <string name="auth_activity_need_input_4_number">Необходимо ввести 4 последние цифры входящего номера.</string>
    <string name="auth_activity_input_4_number">Введите последние 4 цифры</string>
    <string name="auth_activity_7_000_000">+7 000 000&#160;</string>
    <string name="auth_activity_1234">12 34</string>
    <string name="auth_activity_image_phone_description">Иконка телефона</string>
    <string name="auth_activity_robot_wait_with_phone">"Вам в ближайшее время поступит звонок от робота на номер "</string>
    <string name="auth_activity_wait">Пожалуйста подождите…</string>
    <string name="auth_activity_code_error">Неверный код! Повторите попытку!</string>
    <string name="reg_activity_registration">Регистрация</string>
    <string name="reg_activity_user_name">Имя пользователя</string>
    <string name="reg_activity_is_performer">Я исполнитель</string>
    <string name="reg_activity_help">Справка</string>
    <string name="reg_activity_reg_button">Зарегистрироваться</string>
    <string name="reg_activity_help_text">Активируйте данный переключатель, есливы хотите выполнять услуги.\nВ данном случае вам будут достуны функции для работы с опубликованными заявками.</string>
    <string name="reg_activity_user_name_error">Имя не должно быть пустым</string>
    <string name="settings_activity_back">Назад</string>
    <string name="settings_activity_settings">Настройки</string>
    <string name="chat_fragment_chat">Отклики</string>
    <string name="list_advert_fragment_list_advert">Список заявок</string>
    <string name="new_advert_fragment_new_advert">Новая заявка</string>
    <string name="menu_about_app">О приложении</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu">Меню</string>
    <string name="menu_version">"Версия "</string>
    <string name="menu_developer">\nРазработчик: Шакуров Денис</string>
    <string name="ok">OK</string>
    <string name="new_adert_photo">Фото</string>
    <string name="new_adert_back">Назад</string>
    <string name="new_adert_delete_photo">Удалить фото</string>
    <string name="new_adert_loading_data">Загрузка данных</string>
    <string name="new_adert_please_wait">Пожалуйста, подождите…\n\nНе закрывайте приложение до окончания загрузки!</string>
    <string name="new_adert_do_photo">Сделать фото</string>
    <string name="new_adert_set_position">Укажите метоположение</string>
    <string name="new_adert_map">Карта</string>
    <string name="new_adert_done">ГОТОВО</string>
    <string name="new_adert_search">Поиск</string>
    <string name="new_adert_my_location">Моё местоположение</string>
    <string name="new_adert_zoom_out">Отдалить</string>
    <string name="new_adert_zoom_in">Приблизить</string>
    <string name="new_adert_set_category">Выберите наиболее подходящую категорию для вашей заявки</string>
    <string name="new_adert_category">Категория</string>
    <string name="new_adert_set_title">Введите название для вашей заявки.\nНазвание должно кратко отражать суть выполняемой работы, например \"Ремонт холодильника\"</string>
    <string name="new_adert_title">Название</string>
    <string name="new_adert_set_description">Подробно опишите что именно необходимо сделать</string>
    <string name="new_adert_description">Описание</string>
    <string name="new_adert_set_location">Укажите местоположение, где необходимо выполнить заявку</string>
    <string name="new_adert_location_seted">Местоположение указано</string>
    <string name="new_adert_set_loc">Указать местоположение</string>
    <string name="new_adert_add_photo">Добавьте фото, чтобы исполнителям было проще понять, что нужно сделать (необязательно)</string>
    <string name="new_adert_max_photo_5">Можно добавить не более 5 фото</string>
    <string name="new_adert_price">Сумма, руб</string>
    <string name="new_adert_set_price">Укажите сумму, которую вы готовы заплатить за выполнение данной заявки (необязательно)</string>
    <string name="new_adert_create_order">Опубликовать заявку</string>
    <string name="new_adert_not_be_empty">Поле не должно быть пустым</string>
    <string name="new_adert_set_order">Опубликовать заявку?</string>
    <string name="new_adert_set_order_description">Перед публикацией убедитесь в наличии стабильного подключения к интернету.</string>
    <string name="new_adert_yes">Да</string>
    <string name="new_adert_create_done">Готово!</string>
    <string name="new_adert_create_done_desscriprion">Данные успешно загружены на сервер!</string>
    <string name="new_adert_ok">OK</string>
    <string name="filter_filter">Фильтр</string>
    <string name="filter_my_orders">Показать мои заявки</string>
    <string name="filter_choose_categoryes">Выберите категории заявок, которые будут отображаться в списке и на карте</string>
    <string name="list_fragment_filter">Фильтр</string>
    <string name="list_fragment_map">Карта</string>
    <string name="list_fragment_filter_seted_alarm">Применён фильтр по категориям</string>
    <string name="list_fragment_loading">Загрузка данных…</string>
    <string name="list_fragment_wait">Подождите…</string>
    <string name="list_fragment_no_orders">Нет подходящий заявок</string>
    <string name="order_loading">Загрузка данных…</string>
    <string name="order_wait">Подождите…</string>
    <string name="order_title">Название</string>
    <string name="order_description">Описание</string>
    <string name="order_price">Цена</string>
    <string name="order_waiting">Подождите</string>
    <string name="map_filter_filter_seted">Применён фильтр по категориям</string>
    <string name="order_confirm_delete">Подтвердите удаление</string>
    <string name="order_confirm_delete_text">Вы уверены, что хотите удалить этот заказ?</string>
    <string name="order_delete_yes">Да</string>
    <string name="order_delete_cancel">Отмена</string>
    <string name="order_delete_button">Удалить заявку</string>
    <string name="order_response_button">Откликнуться</string>
    <string name="chat_my_responses">Мои отклики</string>
    <string name="chat_for_me_responses">Отклики на мои заявки</string>
    <string name="chat_no_responses">Нет откликов</string>
    <string name="response_dilog_response_text">Текст отклика</string>
    <string name="response_dilog_price">Цена, руб</string>
    <string name="chat_my_response">Мой отклик</string>
    <string name="chat_allow">Принято</string>
    <string name="chat_decline">Отклонено</string>
    <string name="chat_on_wait">На рассмотрении</string>
    <string name="chat_response_text">"Текст отклика: "</string>
    <string name="chat_see_order">Посмотреть заявку</string>
    <string name="chat_my_price">"\nМоя цена: "</string>
    <string name="chat_rub_and_status">" руб. \nСтатус: "</string>
    <string name="chat_name">"\nИмя заказчика: "</string>
    <string name="chat_price">"\nПредложенная цена: "</string>
    <string name="chat_status_on_wait">" руб. \nСтатус: На рассмотрении"</string>
    <string name="chat_cancel">Отмена</string>
    <string name="chat_call">Позвонить заказчику</string>
    <string name="chat_response_for_me">Отклик на мою заявку</string>
    <string name="chat_allow_response">Принять отклик</string>
    <string name="chat_decline_response">Отклонить отклик</string>
    <string name="chat_allowed">Принято</string>
    <string name="chat_declined">Отклонено</string>
    <string name="setting_exit">Выйти из аккаунта</string>

</resources>