<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    tools:context=".activity.AuthActivity">

    <LinearLayout
        android:id="@+id/auth_layout_wait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/auth_activity_wait"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:indeterminate="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/auth_layout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="20dp"
            android:text="@string/auth_activity_auth"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:ems="10"
                android:hint="@string/auth_activity_set_phone"
                android:inputType="phone"
                android:lines="1"
                android:maxLength="17"
                android:text="@string/auth_activity_7" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:onClick="onClickLogIn"
            android:text="@string/auth_activity_login" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/auth_layout_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/call_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/auth_activity_robot_wait"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="15dp">

            <ImageView
                android:id="@+id/imageViewIcon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_phone"
                android:contentDescription="@string/auth_activity_image_phone_description"
                app:tint="?attr/colorOnPrimaryFixedVariant" />

            <TextView
                android:id="@+id/textViewPrefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_activity_7_000_000"
                android:textSize="25sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textViewPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_activity_1234"
                android:textColor="?attr/colorOnPrimaryFixedVariant"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/auth_activity_need_input_4_number"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/code_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/code_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:ems="4"
                android:hint="@string/auth_activity_input_4_number"
                android:inputType="number"
                android:lines="1"
                android:maxLength="4" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:onClick="onClickCheckCode"
            android:text="@string/auth_activity_login" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>