<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewPopup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/new_adert_photo"
        android:scaleType="fitCenter"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="15dp">

        <Button
            android:id="@+id/popButtonBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="15dp"
            android:text="@string/new_adert_back"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />

        <Button
            android:id="@+id/popButtonDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_weight="1"
            android:backgroundTint="#FF0000"
            android:text="@string/new_adert_delete_photo"
            tools:ignore="ButtonStyle,TextContrastCheck,VisualLintButtonSize" />

    </LinearLayout>

</RelativeLayout>
